--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th> Roll Number</th>
+				<th> Name </th>
+			</tr>
+			<tr>
+				<td>
+					12123
+					<br>
+					12124
+				</td>
+				<td>
+					Roshan Kumar Mishra
+					<br>
+					Rishabh Kumar Mishra
+				</td>
+				<td>
+					
+				</td>
+			</tr>
+		</thead>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
