--- a/main.html
+++ b/main.html
@@ -14,6 +14,8 @@
 				<th> Roll Number</th>
 				<th> Name </th>
 			</tr>
+		</thead>
+		<tbody>
 			<tr>
 				<td>
 					12123
@@ -25,11 +27,8 @@
 					<br>
 					Rishabh Kumar Mishra
 				</td>
-				<td>
-					
-				</td>
 			</tr>
-		</thead>
+		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
