--- a/main.html
+++ b/main.html
@@ -17,16 +17,16 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>
-					12123
-					<br>
-					12124
-				</td>
-				<td>
-					Roshan Kumar Mishra
-					<br>
-					Rishabh Kumar Mishra
-				</td>
+				<td>100</td>
+				<td>Roshan kumra Mishra</td>
+			</tr>
+			<tr>
+				<td>101</td>
+				<td>Rishabh kumar Mishra</td>
+			</tr>
+			<tr>
+				<td>102</td>
+				<td>Soniya</td>
 			</tr>
 		</tbody>
 	</table>
